--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,14 +26,10 @@
   <nav>
     <li class="sig"><a href="{{ site.url }}{{ '' | relative_url }}">Home</a></li>
     <li class="title">SIGs:</li>
-    <li class="sig"><a href="{{ site.url }}{{ '/sigs/apis.html' | relative_url }}">APIs</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ 'stakeholders.html' | relative_url }}">Stakeholders</a></li>
     <li class="sig"><a href="{{ site.url }}{{ '/sigs/devops.html' | relative_url }}">DevOps</a></li>
     <li class="sig"><a href="{{ site.url }}{{ '/sigs/eventing.html' | relative_url }}">Eventing</a></li>
-    <li class="title">Teams:</li>
-    <li class="team"><a href="{{ site.url }}{{ '/teams/impact.html' | relative_url }}">Impact</a></li>
-    <li class="team"><a href="{{ site.url }}{{ '/teams/analysis.html' | relative_url }}">Analysis</a></li>
-    <li class="team"><a href="{{ site.url }}{{ '/teams/requirements.html' | relative_url }}">Requirements</a></li>
-    <li class="team"><a href="{{ site.url }}{{ '/teams/variants.html' | relative_url }}">Variants</a></li>
+
   </nav>
 </div><!-- end header -->
 
