--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,19 @@
   </h1>
   <nav>
     <li class="sig"><a href="{{ site.url }}{{ '' | relative_url }}">Home</a></li>
-    <li class="title">SIGs:</li>
-    <li class="sig"><a href="{{ site.url }}{{ 'stakeholders.html' | relative_url }}">Stakeholders</a></li>
-    <li class="sig"><a href="{{ site.url }}{{ '/sigs/devops.html' | relative_url }}">DevOps</a></li>
-    <li class="sig"><a href="{{ site.url }}{{ '/sigs/eventing.html' | relative_url }}">Eventing</a></li>
-
+    <li class="title">Daten:</li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Stakeholder</a></li>
+<!--
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Ziele</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Systemkontext</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Personas</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Szenarien</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Funktionale Anforderungen</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Nichtfunktionale Anforderungen</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Use Cases</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">User Stories</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Qualitätssicherung</a></li>
+-->
   </nav>
 </div><!-- end header -->
 
@@ -41,8 +49,8 @@
 
 
 <footer>
-<a href="{{ site.url }}{{ '/documentation.html' | relative_url }}">Documentation</a> &nbsp;&nbsp;&nbsp;
-<a href="{{ site.url }}{{ '/people.html' | relative_url }}">People</a> &nbsp;&nbsp;&nbsp;
+<a href="{{ site.url }}{{ '/overview/documentation.html' | relative_url }}">Dokumentation</a> &nbsp;&nbsp;&nbsp;
+<a href="{{ site.url }}{{ '/overview/people.html' | relative_url }}">People</a> &nbsp;&nbsp;&nbsp;
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="https://www.th-koeln.de/hochschule/impressum_8159.php">Impressum</a> &nbsp;&nbsp;&nbsp;
 <a href="https://www.th-koeln.de/hochschule/haftungshinweis_8277.php">Haftungshinweis</a> &nbsp;&nbsp;&nbsp;
