--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
     <li class="sig"><a href="{{ site.url }}{{ '' | relative_url }}">Home</a></li>
     <li class="title">Daten:</li>
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Stakeholder</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholderRoles.html' | relative_url }}">Rollen</a></li>
 <!--
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Ziele</a></li>
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Systemkontext</a></li>
