Zwischenstand - Stakeholder, Rollen, Ziele, Übersichtsseiten, Zuordnen von Zuständigkeiten

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,11 @@
   </h1>
   <nav>
     <li class="sig"><a href="{{ site.url }}{{ '' | relative_url }}">Home</a></li>
-    <li class="title">Daten:</li>
+    <li class="title">Artefakte:</li>
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Stakeholder</a></li>
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholderRoles.html' | relative_url }}">Rollen</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/goals.html' | relative_url }}">Ziele</a></li>
+    <li class="title">Quellen:</li>
     <!--
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Ziele</a></li>
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Systemkontext</a></li>
