--- a/_layouts/interview.html
+++ b/_layouts/interview.html
@@ -9,8 +9,9 @@ layout: default
     <dt>Acronym</dt>
     <dd>{{ page.acronym }}</dd>
 
-    <dt>Name</dt>
-    <dd>{{ page.name }}</dd>
+    <dt>Stakeholder</dt>
+    <dd>{{ page.stakeholder }}</dd>
+
 
     {% if page.todos and page.todos.size > 0 %}
         {% assign todo_counter = 0 %}
@@ -20,10 +21,6 @@ layout: default
             <dd>({{ todo_counter }}) {{ entry }}</dd>
         {% endfor %}
     {% endif %}
-
-    <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html mydecision=page %}{{ responsible_string }}</dd>
-
 
     <dt>History</dt>
     {% for entry in page.history %}
