Artefakte bis auf Kontext drin (Abstimmung nötig), Quellen drin - Problem: Workshops-Folder wird nicht erstellt.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholderRoles.html' | relative_url }}">Rollen</a></li>
     <li class="sig"><a href="{{ site.url }}{{ '/overview/goals.html' | relative_url }}">Ziele</a></li>
     <li class="title">Quellen:</li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/interviews.html' | relative_url }}">Interviews</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/literatureReferences.html' | relative_url }}">Literaturverweise</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/surveys.html' | relative_url }}">Umfragen</a></li>
+    <li class="sig"><a href="{{ site.url }}{{ '/overview/workshops.html' | relative_url }}">Workshops</a></li>
     <!--
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Ziele</a></li>
     <li class="sig"><a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Systemkontext</a></li>
