--- a/_layouts/stakeholder.html
+++ b/_layouts/stakeholder.html
@@ -24,6 +24,9 @@ layout: default
     <dt>Responsible</dt>
     <dd>{% include /functions/resolve-names.html mydecision=page %}{{ responsible_string }}</dd>
 
+    <dt>Beziehung zum Projekt</dt>
+    <dd>{{  }}</dd>
+
 
     <dt>History</dt>
     {% for entry in page.history %}
