some syntax fixes

--- a/_layouts/stakeholder.html
+++ b/_layouts/stakeholder.html
@@ -25,7 +25,7 @@ layout: default
     <dd>{% include /functions/resolve-names.html mydecision=page %}{{responsible_string}}</dd>
 
     <dt>Beziehung zum Projekt</dt>
-    <dd>{{  }}</dd>
+    <dd> {{ page.relationshipToProject }} </dd>
 
 
     <dt>History</dt>
