--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,24 +23,53 @@
 
   <a href="{{ site.url }}{{ '' | relative_url }}">Home</a>
   <div class="subnav">
-    <button class="subnavbtn">Artefakte<i class="fa fa-caret-down"></i></button>
+    <button class="subnavbtn">Kontext<i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
+      <span style="float:left; width: 20%"><p>&nbsp;</p></span>
       <a href="{{ site.url }}{{ '/overview/stakeholders.html' | relative_url }}">Stakeholder</a>
-      <a href="{{ site.url }}{{ '/overview/stakeholderRoles.html' | relative_url }}">Rollen</a>
+      <a href="{{ site.url }}{{ '/overview/stakeholderRoles.html' | relative_url }}">Stakeholder-Rollen</a>
       <a href="{{ site.url }}{{ '/overview/goals.html' | relative_url }}">Ziele</a>
       <a href="{{ site.url }}{{ '/overview/systemContextElements.html' | relative_url }}">Systemkontext</a>
     </div>
+  </div>
 
+  <div class="subnav">
+    <button class="subnavbtn">Informell<i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <span style="float:left; width: 38%"><p>&nbsp;</p></span>
+      <a href="{{ site.url }}{{ '/overview/scenarios.html' | relative_url }}">Szenarien</a>
+      <a href="{{ site.url }}{{ '/overview/personas.html' | relative_url }}">Personas</a>
+    </div>
+  </div>
 
+  <div class="subnav">
+    <button class="subnavbtn">Formal<i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <span style="float:left; width: 32%"><p>&nbsp;</p></span>
+      <a href="{{ site.url }}{{ '/overview/functionalRequirements.html' | relative_url }}">Funktionale Anforderungen</a>
+      <a href="{{ site.url }}{{ '/overview/nonFunctionalRequirements.html' | relative_url }}">Nichtfunktionale Anforderungen</a>
+      <a href="{{ site.url }}{{ '/overview/priorization.html' | relative_url }}">Priorisierung</a>
+    </div>
+  </div>
+
+  <div class="subnav">
+    <button class="subnavbtn">Detailliert<i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <span style="float:left; width: 50%"><p>&nbsp;</p></span>
+      <a href="{{ site.url }}{{ '/overview/useCases.html' | relative_url }}">Use Cases</a>
+      <a href="{{ site.url }}{{ '/overview/userStories.html' | relative_url }}">Agiles Backlog</a>
+    </div>
   </div>
 
   <div class="subnav">
     <button class="subnavbtn">Quellen<i class="fa fa-caret-down"></i></button>
       <div class="subnav-content">
+        <span style="float:left; width: 50%"><p>&nbsp;</p></span>
+        <a href="{{ site.url }}{{ '/overview/glossary.html' | relative_url }}">Glossar</a>
         <a href="{{ site.url }}{{ '/overview/interviews.html' | relative_url }}">Interviews</a>
-        <a href="{{ site.url }}{{ '/overview/literatureReferences.html' | relative_url }}">Literaturverweise</a>
-        <a href="{{ site.url }}{{ '/overview/surveys.html' | relative_url }}">Umfragen</a>
         <a href="{{ site.url }}{{ '/overview/workshops.html' | relative_url }}">Workshops</a>
+        <a href="{{ site.url }}{{ '/overview/surveys.html' | relative_url }}">Umfragen</a>
+        <a href="{{ site.url }}{{ '/overview/literatureReferences.html' | relative_url }}">Literatur</a>
       </div>
   </div>
 
