--- a/_layouts/survey.html
+++ b/_layouts/survey.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- {% include /functions/get-status-infos.html mydecision=page %} -->
-<h1>{{ page.title }}</h1>
+<h1>{{ page.subject }}</h1>
 
 <dl>
     <dt>Acronym</dt>
