layout fix, err check refactoring

--- a/_includes/functions/checks/check-generic-aspects.html
+++ b/_includes/functions/checks/check-generic-aspects.html
@@ -16,7 +16,7 @@ w
 Status fehlt
 prefilterPriorizationPoints fehlt
 -->
-{% comment %} ***** Error Numbers 000 - 030 reserved here! **** {% endcomment %}
+{% comment %} ***** Error/Warning Numbers 000 - 030 reserved here! **** {% endcomment %}
 
 
 {% comment %}---------- type -----------{% endcomment %}
