--- a/_includes/functions/print-detailed-check-messages.html
+++ b/_includes/functions/print-detailed-check-messages.html
@@ -7,12 +7,12 @@
 {% if errorList.size > 0 or warningList.size > 0 or todoList.size > 0 %}
 	<dt>Errors, Warnings, Todos</dt>
 	{% for errorMsg in errorList %}
-		<dd><img src="{{ site.url }}{{ '/assets/alert-16.png' | relative_url }}" width="16" height="16"/> &nbsp; {{ errorMsg }}</dd>
+		<dd><img src="{{ site.url }}{{ '/assets/alert-16.png' | relative_url }}" alt="e" width="16" height="16" style="vertical-align:middle;object-fit: cover !important;"/> &nbsp; {{ errorMsg }}</dd>
 	{% endfor %}
 	{% for warningMsg in warningList %}
-		<dd><img src="{{ site.url }}{{ '/assets/warning-16.png' | relative_url }}" width="16" height="16"/> &nbsp; {{ warningMsg }}</dd>
+		<dd><img src="{{ site.url }}{{ '/assets/warning-16.png' | relative_url }}" alt="w" width="16" height="16" style="vertical-align:middle;object-fit: cover !important;"/> &nbsp; {{ warningMsg }}</dd>
 	{% endfor %}
 	{% for todoMsg in todoList %}
-		<dd><img src="{{ site.url }}{{ '/assets/clipboard-4-16.png' | relative_url }}" width="16" height="16"/> &nbsp; {{ todoMsg }}</dd>
+		<dd><img src="{{ site.url }}{{ '/assets/clipboard-4-16.png' | relative_url }}" alt="t" width="16" height="16" style="vertical-align:middle;object-fit: cover !important;"/> &nbsp; {{ todoMsg }}</dd>
 	{% endfor %}
 {% endif %}
